Fixed letter spacing

--- a/alecgalloway/index.css
+++ b/alecgalloway/index.css
@@ -17,8 +17,7 @@
 
 .navbar-item{
     color:rgb(231, 203, 79);
-        letter-spacing: 3px;
-
+    letter-spacing: 1px;
     padding:10px 30px 0 20px
 }
 
